# orch-flow-studio

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README-v2.md  README.md  default  docker-compose.yml  pyproject.toml
.chainlit/translations/: bn.json  el-GR.json  en-GB.json  en-US.json  es.json  fr-FR.json  gu.json  he-IL.json  hi.json  ja.json  kn.json  ml.json  mr.json  nl.json  ta.json  te.json  zh-CN.json  zh-TW.json
.github/workflows/: ci.yml
agent_configs/concierge/: agents.yaml
agent_configs/concierge/prompts/: 00-welcome.md  01-joke.md
agent_configs/customer-support/: agents.yaml
agent_configs/customer-support/prompts/: 00-support-coordinator.md  01-ticket-handler.md  02-knowledge-base.md
agent_configs/customer-support/schemas/: knowledge-output.json  ticket-output.json
agent_configs/orch_flow_studio/: agents.yaml  batch_invoker_sample.py  invoke_agent_sample.py
agent_configs/orch_flow_studio/prompts/: 02-weather.md  03-agent-builder.md  flow_merge_actual_converted.md  processing_unit_oas_generator.md  sync_code_generator.md
agent_configs/orch_flow_studio/schemas/: joke-output.json  processing_unit_oas_spec.json  weather-output.json
agent_configs/sales/: agents.yaml
agent_configs/sales/prompts/: 00-sales-coordinator.md  01-lead-qualification.md  02-product-recommendations.md
agent_configs/sales/schemas/: lead-output.json  product-output.json
docs/MER-12345---Party-Feature/: EventLogInq.js
docs/MER-12345---Party-Feature/json/: 2-sync-methods original.json
docs/design/: concierge.md  orch_flow_studio.md
docs/user-manuals/: scaffolding.md
public/: index.html
sbin/: run_all_domains.sh  run_concierge.sh  run_customer_support.sh  run_file_server.sh  run_orch_flow_studio.sh  run_sales.sh  sanity_test.sh  scaffold.py  setup.sh
src/autobots_agents_jarvis/common/tools/: validation_tools.py
src/autobots_agents_jarvis/configs/: __init__.py
src/autobots_agents_jarvis/domains/concierge/: call_invoke_agent.py  concierge_batch.py  get_schema_for_agent.py  server.py  services.py  settings.py  tools.py
src/autobots_agents_jarvis/domains/customer_support/: server.py  services.py  tools.py
src/autobots_agents_jarvis/domains/sales/: __init__.py  server.py  services.py  tools.py
src/autobots_agents_jarvis/models/: __init__.py
src/autobots_orch_flow_studio/: __init__.py
src/autobots_orch_flow_studio/common/utils/: formatting.py
src/autobots_orch_flow_studio/configs/: settings.py
src/autobots_orch_flow_studio/domains/codegen/services/: agent_builder.py  flow_generator.py  model_oas_generator.py  processing_unit_oas_generator.py  server.py  services.py  sync_methods_oas_generator.py  tools.py
src/autobots_orch_flow_studio/domains/orch_flow_studio/: call_invoke_agent.py  get_schema_for_agent.py  orch_flow_studio_batch.py  server.py  services.py  settings.py  tools.py
src/node_red_flows/: .config.runtime.json  .config.runtime.json.backup  .flows_chat.json.backup  README.md  flows_chat.json  flows_chat_cred.json  settings.js
tests/: __init__.py  conftest.py  helpers.py
tests/integration/: __init__.py
tests/integration/domains/concierge/: conftest.py  test_batch.py
tests/integration/domains/orch_flow_studio/: conftest.py  test_batch.py
tests/sanity/: __init__.py
tests/sanity/domains/concierge/: conftest.py  test_dynagent_canary.py
tests/sanity/domains/orch_flow_studio/: conftest.py  test_dynagent_canary.py
tests/unit/: __init__.py
tests/unit/common/: test_validation_tools.py
tests/unit/domains/concierge/: conftest.py  test_joke_service.py  test_tools.py  test_weather_service.py
tests/unit/domains/customer_support/: __init__.py  test_customer_support_services.py  test_customer_support_tools.py
tests/unit/domains/orch_flow_studio/: conftest.py  test_joke_service.py  test_tools.py  test_weather_service.py
tests/unit/domains/sales/: __init__.py  test_sales_services.py  test_sales_tools.py
(+1 files in other folders)
